/**
 * Copyright 2024 SBAB Bank AB
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package se.sbab.eventsourcing.service

import org.springframework.stereotype.Service
import se.sbab.eventsourcing.DomainState
import se.sbab.eventsourcing.Event
import java.util.NoSuchElementException

@Service
class DomainStateProjector(
    private val rootStateProjector: RootStateProjector,
) {
    fun currentState(events: List<Event>): DomainState {
        if (events.isEmpty()) {
            throw NoSuchElementException("Can not project an empty list")
        }
        val firstEvent = events.first()
        val remainingEvents = events.takeLast(events.size - 1)
        val initialState = rootStateProjector.onEvent(firstEvent)
        return remainingEvents.fold(initialState) { currentState, event ->
            currentState.onEvent(event)
        }
    }
}
